[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/GUI.gd" type="Script" id=1]
[ext_resource path="res://UI/roboto_mono_36.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/InventoryBar.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.0941176, 0.0941176, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 0
custom_constants/margin_left = 30
custom_constants/margin_bottom = 0

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_right = 974.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 944.0
margin_bottom = 98.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HealthSection" type="CenterContainer" parent="MarginContainer/Rows/TopRow"]
margin_right = 200.0
margin_bottom = 98.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/TopRow/HealthSection"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 200, 30 )
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="HealthTween" type="Tween" parent="MarginContainer/Rows/TopRow/HealthSection"]

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Rows/TopRow"]
margin_left = 204.0
margin_right = 822.0
margin_bottom = 98.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="LevelName" type="Label" parent="MarginContainer/Rows/TopRow/CenterContainer"]
margin_left = 232.0
margin_top = 25.0
margin_right = 386.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "Level 1"
uppercase = true

[node name="AmmoSection" type="HBoxContainer" parent="MarginContainer/Rows/TopRow"]
margin_left = 826.0
margin_right = 944.0
margin_bottom = 98.0
mouse_filter = 2
size_flags_vertical = 3
alignment = 1

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/TopRow/AmmoSection"]
margin_top = 25.0
margin_right = 44.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "30"

[node name="Separator" type="Label" parent="MarginContainer/Rows/TopRow/AmmoSection"]
margin_left = 48.0
margin_top = 25.0
margin_right = 70.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "/"

[node name="AmmoLeft" type="Label" parent="MarginContainer/Rows/TopRow/AmmoSection"]
margin_left = 74.0
margin_top = 25.0
margin_right = 118.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "30"

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 102.0
margin_right = 944.0
margin_bottom = 497.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 501.0
margin_right = 944.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3

[node name="InventoryBar" parent="MarginContainer/Rows/BottomRow" instance=ExtResource( 3 )]
